--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "vite": "^2.6.4"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "three": "^0.134.0"
   }
 }
